Pending changes in the mainline
===============================

TODO before release: update to SDK 1.12.10

* The "orthanc.pyi" stub is now excluded from the "install" step during the build
* Added new SCP callbacks:
  - RegisterFindCallback2
  - RegisterMoveCallback3
  - RegisterWorklistCallback2
  - RegisterStorageCommitmentScpCallback2


Version 6.0 (2025-08-12)
========================

=> Maximum SDK version: 1.12.9 (default) <=
=> Minimum SDK version: 1.7.2 <=

* The auto-generation of the Python wrapper is now part of the build,
  to exploit the ORTHANC_PLUGIN_SINCE_SDK macro. This provides backward
  compatibility with the SDK that is actually installed on the system
* The plugin now uses the code model that is part of the core "orthanc" project
* Added Windows builder for Python 3.13
* Added Docker-based builder scripts for Debian 13 (trixie)


Version 5.0 (2025-01-22)
========================

=> Minimum SDK version: 1.12.6 <=

* Added "orthanc.RestOutput.StartStreamAnswer()" and "orthanc.RestOutput.SendStreamChunk()"
* In "orthanc.pyi", enumerations are not tagged as deriving from "enum.Enum" anymore:
  https://github.com/orthanc-server/orthanc-builder/issues/21
* Docker-based builder scripts for Debian 12 (bookworm)


Version 4.3 (2024-07-04)
========================

* Created Python documentation for the Orthanc interface, check out "orthanc.pyi"
* Added option "AllowThreads" to release the GIL during the call to the native SDK functions
* Code model is now generated by the "orthanc-java" project
* Added Windows builder for Python 3.12
* Licensing information is now compliant with the FSFE REUSE specification


Version 4.2 (2024-05-16)
========================

* Fix signature of "orthanc.RestOutput.SendHttpStatus()"
* Added orthanc.RegisterMoveCallback2() that takes 4 callbacks like the 
  original C SDK function.  This allows you to implement a correct handling
  of the C-Move sub-operations count in the GetMoveSize().  The ApplyMove()