@@ -37,22 +37,22 @@ cp -r /source/Sources /tmp/source-writeable/
 mkdir /tmp/build
 cd /tmp/build
 
-wget https://orthanc.uclouvain.be/downloads/third-party-downloads/Python/python-3.13.2-win32.zip
-unzip python-3.13.2-win32.zip
+wget https://orthanc.uclouvain.be/downloads/third-party-downloads/Python/python-3.14.0-win32.zip
+unzip python-3.14.0-win32.zip
 
 if [ "$1" == "Release" ]; then
-    LIBRARY_NAME=python313.lib
+    LIBRARY_NAME=python314.lib
 else
-    LIBRARY_NAME=python313_d.lib
+    LIBRARY_NAME=python314_d.lib
 fi
 
 cmake /tmp/source-writeable/ \
       -DCMAKE_BUILD_TYPE=$1 \
       -DSTATIC_BUILD=ON \
       -DUSE_LEGACY_BOOST=ON \
-      -DPYTHON_VERSION=3.13 \
+      -DPYTHON_VERSION=3.14 \
       -DPYTHON_LIBRARY_NAME=${LIBRARY_NAME} \
-      -DPYTHON_WINDOWS_ROOT=/tmp/build/python-3.13.2-win32/ \
+      -DPYTHON_WINDOWS_ROOT=/tmp/build/python-3.14.0-win32/ \
       -DCMAKE_TOOLCHAIN_FILE=/source/Resources/Orthanc/Toolchains/MinGW-W64-Toolchain32.cmake \
       -DCMAKE_INSTALL_PREFIX=/target 
 
